--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: "3"
 services:
-  coturn:
-    image: instrumentisto/coturn:latest
-    container_name: mcu-coturn
-    environment:
-      - TURN_PORT=3478
-      - TURN_IP=172.30.1.57
-    ports:
-      - "3478:3478/udp"
-      - "3478:3478/tcp"
-      - "5349:5349/tcp"
-      - "5349:5349/udp"
-    command: ["-n", "--log-file=stdout"]
+  # coturn:
+  #   image: instrumentisto/coturn:latest
+  #   container_name: mcu-coturn
+  #   environment:
+  #     - TURN_PORT=3478
+  #     - TURN_IP=172.30.1.57
+  #   ports:
+  #     - "3478:3478/udp"
+  #     - "3478:3478/tcp"
+  #     - "5349:5349/tcp"
+  #     - "5349:5349/udp"
+  #   command: ["-n", "--log-file=stdout"]
 
   kms:
     image: kurento/kurento-media-server:7.0.0
