--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,15 @@
 version: "3"
 services:
-  # coturn:
-  #   image: instrumentisto/coturn:latest
-  #   container_name: mcu-coturn
-  #   environment:
-  #     - TURN_PORT=3478
-  #     - TURN_IP=172.30.1.57
-  #   ports:
-  #     - "3478:3478/udp"
-  #     - "3478:3478/tcp"
-  #     - "5349:5349/tcp"
-  #     - "5349:5349/udp"
-  #   command: ["-n", "--log-file=stdout"]
-
   kms:
     image: kurento/kurento-media-server:7.0.0
     container_name: kms
     platform: linux/amd64
+    command: ["--gst-debug-level=3"]
     ports:
-      - "8888:8888/tcp"
-      - "5000-5050:5000-5050/udp"
+      - "8888:8888"
+      - "5000-5050:5000-5050"
     environment:
+      - KMS_STUN_IP=stun.l.google.com
+      - KMS_STUN_PORT=19302
       - KMS_MIN_PORT=5000
       - KMS_MAX_PORT=5050
